--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,10 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 *migrations*
+!*/migrations/__init__.py
 *staticfiles*
+config.json
+testmail.py
 
 # Flask stuff:
 instance/
